chore: update be API
